2009-12-30  Romain Francois <francoisromain@free.fr>

	* inst/unitTests/runit.RObject.R: new unit tests

	* inst/unitTests/runit.exceptions.R: idem

	* inst/unitTests/runit.XPtr.R: idem

	* man/RcppUnitTests.Rd: shows and link unit test reports generated at
	build time

2009-12-29  Romain Francois <francoisromain@free.fr>

	* src/Rcpp_RObject.{h,cpp}: new namespace Rcpp and new class
	Rcpp::RObject to replace RcppSexp with the same functionality.
	
	* src/Rcpp_XPtr.h: replaces RcppXPtr.h and the class is now 
	Rcpp::XPtr<> and extends Rcpp::RObject
	
	* inst/examples/RcppInline/external_pointer.r: use the new namespace
	
	* inst/examples/RcppInline/RcppInlineWithLibsExamples.r: idem
	
	* inst/examples/RcppInline/RcppSexpTests.r: idem
	
	* DESCRIPTION: marked as version 0.7.0.5
	
	* inst/doc/*: fake (empty) vignette and unit test trigger
	
	* inst/unitTests/*: prepare the space for unit tests
	
	* tests/doRUnit.R : added the usual RUnit tests trigger

2009-12-29  Romain Francois <francoisromain@free.fr>

	* src/RcppXPtr.h: now RcppXPtr extends RcppSexp and RcppSexp manages
	garbarge collection, attributes, etc ...
	
	* src/exceptions.cpp: replaces src/exception_handling.cpp
	
	* DESCRIPTION: now suggesting RUnit.

2009-12-29  Romain Francois <francoisromain@free.fr>

	* src/RcppXPtr.h: added operator SEXP() to class
	RcppXPtr to ease implicit conversion from RcppXPtr to SEXP.
	This means we can directly return the RcppXPtr object to R when the 
	return type of the function is SEXP. (no need to explicitely call 
	asSexp anymore)
	
	* src/RcppSexp.{h,cpp} : idem
	
2009-12-29  Romain Francois <francoisromain@free.fr>

	* src/RcppXPtr.h: new smart external pointer wrapper. The RcppXPtr 
	template can be used to wrap a external pointer (SEXP) so that it 
	looks like the dumb pointer it is wrapping (as far as the * and -> 
	operator are concerned). The template parameter controls the type
	of object that is wrapped by the pointer. 
	